<resources>
    <string name="app_name">FriendChat</string>
    <string name="user_name">Nick de usuario</string>
    <string name="password">Contraseña</string>
    <string name="login_button">Entrar</string>
    <string name="signup_button">Registrar</string>
    <string name="nombre">Nombre completo</string>
    <string name="create_user">Crear usuario</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FriendChat</string>
    <string name="nav_header_subtitle">Subtitulo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
</resources>