<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundapp"
    tools:context=".ActivityLogin">

    <Button
        android:id="@+id/boton_registrar"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#B3E47B"
        android:text="@string/signup_button"
        android:textColor="#000000"
        app:circularflow_radiusInDP="20sp"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_entrar" />

    <ImageView
        android:id="@+id/icono"
        android:layout_width="230dp"
        android:layout_height="196dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icono" />

    <EditText
        android:id="@+id/editTextContrasenya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="25"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsuario" />

    <Button
        android:id="@+id/boton_entrar"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#F1E68A"
        android:text="@string/login_button"
        android:textColor="#000000"
        app:circularflow_radiusInDP="20sp"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContrasenya" />

</androidx.constraintlayout.widget.ConstraintLayout>