<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundapp"
    tools:context=".ActivitySignUp">

    <EditText
        android:id="@+id/editTextNuevoNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:maxLength="60"
        android:minHeight="48dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconoRegistro" />

    <ImageView
        android:id="@+id/iconoRegistro"
        android:layout_width="230dp"
        android:layout_height="196dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono" />

    <EditText
        android:id="@+id/editTextNuevoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:minHeight="48dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNuevoNombre" />

    <EditText
        android:id="@+id/editTextNuevaContrasenya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="25"
        android:minHeight="48dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNuevoUsuario" />

    <Button
        android:id="@+id/boton_crearUsuario"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#F1E68A"
        android:text="@string/create_user"
        android:textColor="#000000"
        app:circularflow_radiusInDP="20sp"
        app:cornerRadius="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNuevaContrasenya" />

</androidx.constraintlayout.widget.ConstraintLayout>